--- a/25_Dados_de_treino_e_teste.ipynb
+++ b/25_Dados_de_treino_e_teste.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyODrHfLV4u+kvUo3lMo58sM",
+      "authorship_tag": "ABX9TyNpTFz4u8sE+Z0eOtm1Axe/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1702,6 +1702,50 @@
       },
       "execution_count": 7,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(X_train.shape)\n",
+        "print(X_test.shape)\n",
+        "print(y_train.shape)\n",
+        "print(y_test.shape)\n",
+        "print(df.shape)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Wt1LSiyQChwc",
+        "outputId": "9a76b1c9-b161-42dc-f79b-9c4e77990b6f"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(1054, 34)\n",
+            "(187, 34)\n",
+            "(1054,)\n",
+            "(187,)\n",
+            "(1241, 35)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Links para ler:\n",
+        "\n",
+        "[Como lidar com dados desbalanceados](https://sigmoidal.ai/como-lidar-com-dados-desbalanceados/) (artigo)\n",
+        "\n",
+        "[Machine Learning Crash Course](https://developers.google.com/machine-learning/crash-course/training-and-test-sets/playground-exercise) (curso da Google)"
+      ],
+      "metadata": {
+        "id": "kSouEb5GCr06"
+      }
     }
   ]
 }
